[CAMEL-11257] Modified AS2 API interface and updated configurations and tests.

--- a/components/camel-as2/camel-as2-component/pom.xml
+++ b/components/camel-as2/camel-as2-component/pom.xml
@@ -149,7 +149,9 @@
                 <api>
                     <apiName>send</apiName>
                     <proxyClass>org.apache.camel.component.as2.api.AS2ClientManager</proxyClass>
-                    <fromJavadoc/>
+                    <fromJavadoc>
+                      <excludeMethods>createSigningGenerator</excludeMethods>
+                    </fromJavadoc>
                 </api>
                 <api>
                     <apiName>listen</apiName>
