--- a/components/camel-as2/camel-as2-api/pom.xml
+++ b/components/camel-as2/camel-as2-api/pom.xml
@@ -23,12 +23,12 @@
 	<parent>
 		<groupId>org.apache.camel</groupId>
 		<artifactId>camel-as2-parent</artifactId>
-		<version>2.20.0-SNAPSHOT</version>
+		<version>2.22.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>camel-as2-api</artifactId>
-	<name>Camel AS2 Component API</name>
-	<description>API for Camel AS2 Component</description>
+	<name>Camel :: AS2 :: API</name>
+	<description>Camel AS2 API</description>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
