--- a/components/camel-as2/camel-as2-component/pom.xml
+++ b/components/camel-as2/camel-as2-component/pom.xml
@@ -22,13 +22,13 @@
   <parent>
     <groupId>org.apache.camel</groupId>
     <artifactId>camel-as2-parent</artifactId>
-    <version>2.20.0-SNAPSHOT</version>
+    <version>2.22.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>camel-as2</artifactId>
   <packaging>jar</packaging>
   <name>Camel :: AS2 :: Component</name>
-  <description>Camel AS2 Component</description>
+  <description>Camel AS2 component</description>
 
   <properties>
     <schemeName>as2</schemeName>
