--- a/components/camel-as2/pom.xml
+++ b/components/camel-as2/pom.xml
@@ -22,14 +22,14 @@
   <parent>
     <artifactId>components</artifactId>
     <groupId>org.apache.camel</groupId>
-    <version>2.20.0-SNAPSHOT</version>
+    <version>2.22.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>camel-as2-parent</artifactId>
   <packaging>pom</packaging>
 
-  <name>Camel AS2 Component Parent</name>
-  <description>Parent project for Camel {AS2} Component</description>
+  <name>Camel :: AS2 :: Parent</name>
+  <description>Camel AS2 parent</description>
 
   <modules>
     <module>camel-as2-component</module>
